--- a/MediaEnumerator/app/src/main/AndroidManifest.xml
+++ b/MediaEnumerator/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xfdingustc.mediaenumerator" >
+    package="com.xfdingustc.mediaenumerator_sample" >
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.xfdingustc.mediaenumerator_sample.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +19,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".BrowseVideoActivity"/>
+        <activity android:name="com.xfdingustc.mediaenumerator_sample.BrowseVideoActivity"/>
     </application>
 
 </manifest>
